--- a/our team.html
+++ b/our team.html
@@ -8,9 +8,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 
-    <!-- aos -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <!-- Font Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,7 +42,7 @@
       <div class="navbar" id="navbar">
         <i class="bx bx-menu"></i>
         <div class="logo">
-          <a href="#hero">
+          <a href="home yogma.html">
             <img src="Assets/img/logo yogma.png" alt="" />
             <span> PT.Yogma Wijaya Kusuma </span></a
           >
@@ -715,10 +712,10 @@
       <div class="careers container">
         <div class="line"></div>
         <div class="row mb-5">
-          <div class="image-poster col-md-7" data-aos="fade-right">
+          <div class="image-poster col-md-7">
             <img src="assets/vector/hiring.png" alt="" />
           </div>
-          <div class="judul_careers col-md-5" data-aos="fade-left">
+          <div class="judul_careers col-md-5">
             <h1>We are<span> Hiring </span>for Several Position!</h1>
             <p><span>PT. Yogma Wijaya Kusuma</span> is a company in the field of services managed by private parties engaged in the field of Steel Construction, Building Maintenance, Supplier ,etc. ></p>
             <p><span>PT. Yogma Wijaya Kusuma</span> growing after becoming one of subcon of PT. Takenaka Indonesia, PT. Takenaka Doboku, PT. Schneider , etc since 2000.</p>
@@ -913,12 +910,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
-    <!-- aos -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
 
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
