--- a/home yogma.html
+++ b/home yogma.html
@@ -8,9 +8,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 
-    <!-- aos -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <!-- Font Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,6 +18,7 @@
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+
     <!-- navbar css -->
     <link rel="stylesheet" href="css/navbar.css" />
     <!-- button css -->
@@ -41,7 +39,7 @@
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
 
-    <title>Home | PT. Yogma Wijaya kusuma</title>
+    <title>PT. Yogma Wijaya kusuma</title>
   </head>
   <body>
     <!-- navbar -->
@@ -50,7 +48,7 @@
       <div class="navbar" id="navbar">
         <i class="bx bx-menu"></i>
         <div class="logo">
-          <a href="#hero">
+          <a href="home yogma.html">
             <img src="Assets/img/logo yogma.png" alt="" />
             <span> PT.Yogma Wijaya Kusuma </span></a
           >
@@ -62,7 +60,7 @@
           </div>
           <ul class="links">
             <li>
-              <a href="#about-us">ABOUT US</a>
+              <a href="home yogma.html#about-us">ABOUT US</a>
               <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
               <ul class="htmlCss-sub-menu sub-menu">
                 <li><a href="history.html">history</a></li>
@@ -85,10 +83,10 @@
               <a href="#business">BUSINESS</a>
               <i class="bx bxs-chevron-down js-arrow arrow"></i>
               <ul class="js-sub-menu sub-menu">
-                <li><a href="#business">SERVICE</a></li>
-                <li><a href="#business">busines unit location</a></li>
-                <li><a href="equipment.html">Equipmen & facility </a></li>
-                <li><a href="#projects">Project list</a></li>
+                <li><a href="home yogma.html#business">SERVICE</a></li>
+                <li><a href="home yogma.html#business">busines unit location</a></li>
+                <li><a href="#">Equipmen & facility </a></li>
+                <li><a href="project.html">Project list</a></li>
               </ul>
             </li>
             <li><a href="#contact-us">CONTACT US</a></li>
@@ -323,7 +321,6 @@
     <!-- project -->
     <section id="projects">
       <div class="judul_project container">
-        b
         <div class="line"></div>
         <div class="container mb-5">
           <h1 data-aos="fade-down">Trusted <span>by 1000+</span> Customers in the World</h1>
@@ -690,19 +687,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     <!-- aos -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
 
     <!-- jquary script -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 
-    <!-- swiper js -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-
     <!-- navbar java script -->
     <script src="js/navbar.js"></script>
+
+    <!-- swiper js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
     <!-- my java script -->
     <script src="js/language.js"></script>
