--- a/equipment.html
+++ b/equipment.html
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- My Style  -->
     <link rel="stylesheet" href="css/client.css" />
 
@@ -43,7 +44,7 @@
       <div class="navbar" id="navbar">
         <i class="bx bx-menu"></i>
         <div class="logo">
-          <a href="home yogma.html">
+          <a href="index.html">
             <img src="Assets/img/logo yogma.png" alt="" />
             <span> PT.Yogma Wijaya Kusuma </span></a
           >
@@ -55,21 +56,21 @@
           </div>
           <ul class="links">
             <li>
-              <a href="home yogma.html#about-us">ABOUT US</a>
+              <a href="index.html#about-us">ABOUT US</a>
               <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
               <ul class="htmlCss-sub-menu sub-menu">
                 <li><a href="history.html">history</a></li>
-                <li><a href="our team.html">Meet our Team</a></li>
+                <li><a href="our-team.html">Meet our Team</a></li>
 
                 <li class="more">
                   <span
-                    ><a href="our team.html#careers">Career</a>
+                    ><a href="our-team.html#careers">Career</a>
                     <i class="bx bxs-chevron-right arrow more-arrow"></i>
                   </span>
                   <ul class="more-sub-menu sub-menu">
-                    <li><a href="our team.html#careers">Internship</a></li>
-                    <li><a href="our team.html#careers">Fresh graduate</a></li>
-                    <li><a href="our team.html#careers">Propesional</a></li>
+                    <li><a href="our-team.html#careers">Internship</a></li>
+                    <li><a href="our-team.html#careers">Fresh graduate</a></li>
+                    <li><a href="our-team.html#careers">Propesional</a></li>
                   </ul>
                 </li>
               </ul>
@@ -78,8 +79,8 @@
               <a href="#business">BUSINESS</a>
               <i class="bx bxs-chevron-down js-arrow arrow"></i>
               <ul class="js-sub-menu sub-menu">
-                <li><a href="home yogma.html#business">SERVICE</a></li>
-                <li><a href="home yogma.html#business">busines unit location</a></li>
+                <li><a href="index.html#business">SERVICE</a></li>
+                <li><a href="index.html#business">busines unit location</a></li>
                 <li><a href="#">Equipmen & facility </a></li>
                 <li><a href="project.html">Project list</a></li>
               </ul>
@@ -146,7 +147,7 @@
         <h1>EQUIP<span>MENT</span></h1>
       </div>
       <div class="yooo container">
-        <div class="kiri" data-aos="fade-right">
+        <div class="kiri" data-aos="fade-up">
           <ul class="nav nav-pills" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
               <button class="nav-link active" id="pills-workshop-tab" data-bs-toggle="pill" data-bs-target="#pills-workshop" type="button" role="tab" aria-controls="pills-workshop" aria-selected="true">
@@ -614,10 +615,10 @@
           <div class="col-lg-2">
             <h4>company</h4>
             <ul>
-              <li><a href="home yogma.html#hero">home</a></li>
-              <li><a href="home yogma.html#about-us">about us</a></li>
-              <li><a href="home yogma.html#business">business</a></li>
-              <li><a href="home yogma.html#footer">contact us</a></li>
+              <li><a href="index.html#hero">home</a></li>
+              <li><a href="index.html#about-us">about us</a></li>
+              <li><a href="index.html#business">business</a></li>
+              <li><a href="index.html#footer">contact us</a></li>
             </ul>
           </div>
           <div class="col-lg-2">
@@ -625,8 +626,8 @@
             <ul>
               <li><a href="history.html">history</a></li>
               <li><a href="history.html#our-partner">our partner</a></li>
-              <li><a href="our team.html">our team</a></li>
-              <li><a href="our team.html#careers">career</a></li>
+              <li><a href="our-team.html">our team</a></li>
+              <li><a href="our-team.html#careers">career</a></li>
             </ul>
           </div>
           <div class="col-lg-2">
@@ -650,7 +651,7 @@
         <div>
           <h6>created by</h6>
           <div class="logo-mutidimensi">
-            <img src="assets/img/LOGO MULTIDIMENSI-03.png" alt="" />
+            <img src="assets/img/LOGO MULTIDIMENSI.jpg" alt="" />
           </div>
 
           <span>
@@ -675,7 +676,11 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
