--- a/our-team.html
+++ b/our-team.html
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Font Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,7 +43,7 @@
       <div class="navbar" id="navbar">
         <i class="bx bx-menu"></i>
         <div class="logo">
-          <a href="home yogma.html">
+          <a href="index.html">
             <img src="Assets/img/logo yogma.png" alt="" />
             <span> PT.Yogma Wijaya Kusuma </span></a
           >
@@ -54,20 +55,20 @@
           </div>
           <ul class="links">
             <li>
-              <a href="home yogma.html#about-us">ABOUT US</a>
+              <a href="index.html#about-us">ABOUT US</a>
               <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
               <ul class="htmlCss-sub-menu sub-menu">
                 <li><a href="history.html">history</a></li>
-                <li><a href="our team.html">Meet our Team</a></li>
+                <li><a href="our-team.html">Meet our Team</a></li>
                 <li class="more">
                   <span
-                    ><a href="our team.html#careers">Career</a>
+                    ><a href="our-team.html#careers">Career</a>
                     <i class="bx bxs-chevron-right arrow more-arrow"></i>
                   </span>
                   <ul class="more-sub-menu sub-menu">
-                    <li><a href="our team.html#careers">Internship</a></li>
-                    <li><a href="our team.html#careers">Fresh graduate</a></li>
-                    <li><a href="our team.html#careers">Propesional</a></li>
+                    <li><a href="our-team.html#careers">Internship</a></li>
+                    <li><a href="our-team.html#careers">Fresh graduate</a></li>
+                    <li><a href="our-team.html#careers">Propesional</a></li>
                   </ul>
                 </li>
               </ul>
@@ -76,8 +77,8 @@
               <a href="#business">BUSINESS</a>
               <i class="bx bxs-chevron-down js-arrow arrow"></i>
               <ul class="js-sub-menu sub-menu">
-                <li><a href="home yogma.html#business">SERVICE</a></li>
-                <li><a href="home yogma.html#business">busines unit location</a></li>
+                <li><a href="index.html#business">SERVICE</a></li>
+                <li><a href="index.html#business">busines unit location</a></li>
                 <li><a href="equipment.html">Equipmen & facility </a></li>
                 <li><a href="project.html">Project list</a></li>
               </ul>
@@ -130,7 +131,7 @@
     <!-- hero section -->
     <section id="hero-ourteam" class="hero-ourteam container-fluid">
       <div class="container">
-        <h1 data-aos="fade-right">let's Meet our <br /><span> Amazing</span> team!!</h1>
+        <h1 data-aos="fade-up">let's Meet our <br /><span> Amazing</span> team!!</h1>
         <p>Lorem ipsum doloram amet culpa, necessitatibus nulla!</p>
         <a href="#careers">
           <button class="tombol btn2" data-aos="fade-up">join our team</button>
@@ -259,7 +260,7 @@
             </div>
           </div>
           <!-- card andre -->
-          <div class="card drafter swiper-slide">
+          <div class="card drafter employe swiper-slide">
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
@@ -276,7 +277,7 @@
             </div>
           </div>
           <!-- card saiful -->
-          <div class="card drafter swiper-slide">
+          <div class="card drafter employe swiper-slide">
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
@@ -293,7 +294,7 @@
             </div>
           </div>
           <!-- card yuda -->
-          <div class="card engineer swiper-slide">
+          <div class="card engineer employe swiper-slide">
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
@@ -310,7 +311,7 @@
             </div>
           </div>
           <!-- card ardi -->
-          <div class="card engineer swiper-slide">
+          <div class="card engineer employe swiper-slide">
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
@@ -327,7 +328,7 @@
             </div>
           </div>
           <!-- card ida -->
-          <div class="card engineer swiper-slide">
+          <div class="card engineer employe swiper-slide">
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
@@ -344,7 +345,7 @@
             </div>
           </div>
           <!-- card  muholik-->
-          <div class="card engineer swiper-slide">
+          <div class="card engineer employe swiper-slide">
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
@@ -361,7 +362,7 @@
             </div>
           </div>
           <!-- card rizal -->
-          <div class="card accounting swiper-slide">
+          <div class="card accounting employe swiper-slide">
             <div class="image-content">
               <span class="overlay"></span>
               <div class="card-image">
@@ -627,7 +628,7 @@
       <a href="#">&times;</a>
       <div class="content-popup">
         <div class="left-popup">
-          <img src="Assets/foto profile/female 2.jpg" alt="" />
+          <img src="Assets/foto profile/ahmadenginer.jpg" alt="" />
         </div>
         <div class="pembatas"></div>
         <div class="right-popup">
@@ -849,10 +850,10 @@
           <div class="col-lg-2">
             <h4>company</h4>
             <ul>
-              <li><a href="home yogma.html#hero">home</a></li>
-              <li><a href="home yogma.html#about-us">about us</a></li>
-              <li><a href="home yogma.html#business">business</a></li>
-              <li><a href="home yogma.html#footer">contact us</a></li>
+              <li><a href="index.html#hero">home</a></li>
+              <li><a href="index.html#about-us">about us</a></li>
+              <li><a href="index.html#business">business</a></li>
+              <li><a href="index.html#footer">contact us</a></li>
             </ul>
           </div>
           <div class="col-lg-2">
@@ -860,8 +861,8 @@
             <ul>
               <li><a href="history.html">history</a></li>
               <li><a href="history.html#our-partner">our partner</a></li>
-              <li><a href="our team.html">our team</a></li>
-              <li><a href="our team.html#careers">career</a></li>
+              <li><a href="our-team.html">our team</a></li>
+              <li><a href="our-team.html#careers">career</a></li>
             </ul>
           </div>
           <div class="col-lg-2">
@@ -885,7 +886,7 @@
         <div>
           <h6>created by</h6>
           <div class="logo-mutidimensi">
-            <img src="assets/img/LOGO MULTIDIMENSI-03.png" alt="" />
+            <img src="assets/img/LOGO MULTIDIMENSI.jpg" alt="" />
           </div>
 
           <span>
@@ -910,7 +911,11 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
