--- a/project-epson.html
+++ b/project-epson.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Font Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -41,7 +43,7 @@
       <div class="navbar" id="navbar">
         <i class="bx bx-menu"></i>
         <div class="logo">
-          <a href="home yogma.html">
+          <a href="index.html">
             <img src="Assets/img/logo yogma.png" alt="" />
             <span> PT.Yogma Wijaya Kusuma </span></a
           >
@@ -53,21 +55,21 @@
           </div>
           <ul class="links">
             <li>
-              <a href="home yogma.html#about-us">ABOUT US</a>
+              <a href="index.html#about-us">ABOUT US</a>
               <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
               <ul class="htmlCss-sub-menu sub-menu">
                 <li><a href="history.html">history</a></li>
-                <li><a href="our team.html">Meet our Team</a></li>
+                <li><a href="our-team.html">Meet our Team</a></li>
 
                 <li class="more">
                   <span
-                    ><a href="our team.html#careers">Career</a>
+                    ><a href="our-team.html#careers">Career</a>
                     <i class="bx bxs-chevron-right arrow more-arrow"></i>
                   </span>
                   <ul class="more-sub-menu sub-menu">
-                    <li><a href="our team.html#careers">Internship</a></li>
-                    <li><a href="our team.html#careers">Fresh graduate</a></li>
-                    <li><a href="our team.html#careers">Propesional</a></li>
+                    <li><a href="our-team.html#careers">Internship</a></li>
+                    <li><a href="our-team.html#careers">Fresh graduate</a></li>
+                    <li><a href="our-team.html#careers">Propesional</a></li>
                   </ul>
                 </li>
               </ul>
@@ -76,8 +78,8 @@
               <a href="#business">BUSINESS</a>
               <i class="bx bxs-chevron-down js-arrow arrow"></i>
               <ul class="js-sub-menu sub-menu">
-                <li><a href="home yogma.html#business">SERVICE</a></li>
-                <li><a href="home yogma.html#business">busines unit location</a></li>
+                <li><a href="index.html#business">SERVICE</a></li>
+                <li><a href="index.html#business">busines unit location</a></li>
                 <li><a href="#">Equipmen & facility </a></li>
                 <li><a href="project.html">Project list</a></li>
               </ul>
@@ -145,7 +147,7 @@
 
     <div class="container">
       <div class="content-project">
-        <h3 class="title_project" data-aos="fade-right">PT. Indonesia Epson Industry</h3>
+        <h3 class="title_project" data-aos="fade-up">PT. Indonesia Epson Industry</h3>
         <span>
           <a
             class="location"
@@ -156,7 +158,7 @@
       </div>
     </div>
     <!--  -->
-    <div class="project-collection container" data-aos="fade-right">
+    <div class="project-collection container" data-aos="fade-up">
       <div class="year">2001</div>
       <div class="project">
         <div class="paragraf1">Ragum SZ Maintenance Table,Box waste,Signs signs in the factory environment,Box for wwt sludge,table QQC inspection.</div>
@@ -164,31 +166,31 @@
         <div class="paragraf1">Rack galon Aqua,Box for ink pack waste,Box stainlees for dispenser,Almari rack joy boy,Wagon for LPG at canteen,Setting foty and accesoris,Rack fifo system for Nitto,etc.</div>
       </div>
     </div>
-    <div class="project-collection container" data-aos="fade-left">
+    <div class="project-collection container" data-aos="fade-up">
       <div class="project">
         <div class="paragraf2">Rack galon Aqua,Box for ink pack waste,Box stainlees for dispenser,Almari rack joy boy,Wagon for LPG at canteen,Setting foty and accesoris,Rack fifo system for Nitto,etc.</div>
       </div>
       <div class="year">2002</div>
     </div>
-    <div class="project-collection container" data-aos="fade-right">
+    <div class="project-collection container" data-aos="fade-up">
       <div class="year">2003</div>
       <div class="project">
         <div class="paragraf1">Repair foty,Notice board,Figura basic safety policy,Sign board of fire extinguisher table komputer.</div>
       </div>
     </div>
-    <div class="project-collection container" data-aos="fade-left">
+    <div class="project-collection container" data-aos="fade-up">
       <div class="project">
         <div class="paragraf2">Repair fotty,setting fotty,Rack calibration,table canteen,box hydrant,table computer.</div>
       </div>
       <div class="year">2004</div>
     </div>
-    <div class="project-collection container" data-aos="fade-right">
+    <div class="project-collection container" data-aos="fade-up">
       <div class="year">2005</div>
       <div class="project">
         <div class="paragraf1">Box Hydrant,Canteen table,Notice board,Frame for enviroment,Rack CPU,Table computer,etc.</div>
       </div>
     </div>
-    <div class="project-collection container" data-aos="fade-left">
+    <div class="project-collection container" data-aos="fade-up">
       <div class="project">
         <div class="paragraf2">Extension table,table & Chair canteen,Supplier consumable and repairing</div>
       </div>
@@ -312,10 +314,10 @@
           <div class="col-lg-2">
             <h4>company</h4>
             <ul>
-              <li><a href="home yogma.html#hero">home</a></li>
-              <li><a href="home yogma.html#about-us">about us</a></li>
-              <li><a href="home yogma.html#business">business</a></li>
-              <li><a href="home yogma.html#footer">contact us</a></li>
+              <li><a href="index.html#hero">home</a></li>
+              <li><a href="index.html#about-us">about us</a></li>
+              <li><a href="index.html#business">business</a></li>
+              <li><a href="index.html#footer">contact us</a></li>
             </ul>
           </div>
           <div class="col-lg-2">
@@ -323,8 +325,8 @@
             <ul>
               <li><a href="history.html">history</a></li>
               <li><a href="history.html#our-partner">our partner</a></li>
-              <li><a href="our team.html">our team</a></li>
-              <li><a href="our team.html#careers">career</a></li>
+              <li><a href="our-team.html">our team</a></li>
+              <li><a href="our-team.html#careers">career</a></li>
             </ul>
           </div>
           <div class="col-lg-2">
@@ -348,7 +350,7 @@
         <div>
           <h6>created by</h6>
           <div class="logo-mutidimensi">
-            <img src="assets/img/LOGO MULTIDIMENSI-03.png" alt="" />
+            <img src="assets/img/LOGO MULTIDIMENSI.jpg" alt="" />
           </div>
 
           <span>
@@ -373,7 +375,11 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
