--- a/how-we-work.html
+++ b/how-we-work.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <!-- My Style  -->
     <link rel="stylesheet" href="css/loader.css" />
-    <link rel="stylesheet" href="css/page history.css" />
+    <link rel="stylesheet" href="css/tempalte sub page.css" />
     <link rel="stylesheet" href="css/footer.css" />
 
     <!-- Logo Title Bar -->
@@ -35,7 +35,7 @@
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
 
-    <title>history | PT. Yogma Wijaya kusuma</title>
+    <title>How We Work | PT. Yogma Wijaya kusuma</title>
   </head>
   <body>
     <!-- loader -->
@@ -153,16 +153,17 @@
         </div>
       </div>
     </nav>
+
     <!-- Ahir navbar -->
 
     <!-- hero section -->
     <section id="hero-history" class="hero-history container-fluid">
       <div class="container">
         <h1 data-aos="fade-up">
-          A long history makes <br />
-          <span>us stronger</span>
+          How we
+          <span>Work</span>
         </h1>
-        <a data-aos="fade-up" href="our-team.html#careers">><button class="tombol btn2">join our team</button></a>
+        <a data-aos="fade-up" href="our-team.html#careers">><button class="tombol btn2">button</button></a>
       </div>
     </section>
 
@@ -174,7 +175,7 @@
         <div class="line"></div>
         <div class="row mb-5 justify-content-between">
           <div class="judul_history col-md-3 mb-3" data-aos="fade-up">
-            <h1>COMPANY HISTORY</h1>
+            <h1>How we Work</h1>
           </div>
           <div class="paragraf col-md-8" data-aos="fade-up">
             <p>
@@ -183,90 +184,6 @@
               best service to customers, we have a professional and qualified work team in the field of welding and painting that produces products according to orders, competitive prices and timely completion of work and delivery of goods.
               For that we hope that if your company needs our company to handle the work in accordance with our field, we will try to solve it as best as possible with maximum results.
             </p>
-          </div>
-        </div>
-      </div>
-      <!-- slide partner  -->
-      <div class="our_partner" id="our-partner">
-        <h1 class="judul_ourpartner text-center">Our Partner</h1>
-        <div class="tagline_ourpartner">Partner who is always solid with us is:</div>
-        <div class="slider">
-          <div class="slide-track">
-            <!-- 7 logo -->
-            <div class="slide">
-              <img src="assets/logo partner/1.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/2.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/3.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/4.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/5.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/6.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/7.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/1.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/2.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/3.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/4.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/5.png" alt="" />
-            </div>
-
-            <!-- 7 logo doubled -->
-            <div class="slide">
-              <img src="assets/logo partner/1.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/2.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/3.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/4.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/5.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/6.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/7.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/1.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/2.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/3.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/4.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="assets/logo partner/5.png" alt="" />
-            </div>
           </div>
         </div>
       </div>
@@ -449,6 +366,7 @@
     <!--  ahir footer-->
     <!-- loader -->
     <script src="js/preloader.js"></script>
+
     <!-- load icon -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 
