--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/button.css" />
 
     <!-- My Style  -->
+    <link rel="stylesheet" href="css/loader.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/desktop version.css" />
     <link rel="stylesheet" href="css/sliderbanner.css" />
@@ -43,6 +44,12 @@
     <title>PT. Yogma Wijaya kusuma</title>
   </head>
   <body>
+    <!-- loader -->
+    <div class="loader" id="preloader">
+      <img src="assets/img/logo yogma biru.png" alt="" />
+      <div class="spinner"></div>
+    </div>
+
     <!-- navbar -->
 
     <nav>
@@ -62,17 +69,28 @@
           <ul class="links">
             <li>
               <a href="index.html#about-us">ABOUT US</a>
-              <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
-              <ul class="htmlCss-sub-menu sub-menu">
-                <li><a href="history.html">history</a></li>
-                <li><a href="our-team.html">Meet our Team</a></li>
-
+              <i class="bx bxs-chevron-down aboutus-arrow arrow"></i>
+              <ul class="aboutus-sub-menu sub-menu">
+                <li><a href="history.html">Company History</a></li>
                 <li class="more">
                   <span
-                    ><a href="our-team.html#careers">Career</a>
+                    ><a href="how-we-work.html">How We Work</a>
                     <i class="bx bxs-chevron-right arrow more-arrow"></i>
                   </span>
                   <ul class="more-sub-menu sub-menu">
+                    <li><a href="how-we-work.html#">Savety & Environtment</a></li>
+                    <li><a href="how-we-work.html#">exemplarity</a></li>
+                    <li><a href="how-we-work.html#">unity & shcedule</a></li>
+                  </ul>
+                </li>
+                <li><a href="history.html#">Our Comitment</a></li>
+                <li><a href="our-team.html">Meet our Team</a></li>
+                <li class="more">
+                  <span
+                    ><a href="our-team.html#careers">Career</a>
+                    <i class="bx bxs-chevron-right arrow more-arrow2"></i>
+                  </span>
+                  <ul class="more-sub-menu2 sub-menu">
                     <li><a href="our-team.html#careers">Internship</a></li>
                     <li><a href="our-team.html#careers">Fresh graduate</a></li>
                     <li><a href="our-team.html#careers">Propesional</a></li>
@@ -81,12 +99,23 @@
               </ul>
             </li>
             <li>
-              <a href="#business">BUSINESS</a>
+              <a href="index.html#business">BUSINESS</a>
               <i class="bx bxs-chevron-down js-arrow arrow"></i>
               <ul class="js-sub-menu sub-menu">
-                <li><a href="index.html#business">SERVICE</a></li>
-                <li><a href="index.html#business">busines unit location</a></li>
-                <li><a href="#">Equipmen & facility </a></li>
+                <li class="more">
+                  <span
+                    ><a href="our-service.html">our service</a>
+                    <i class="bx bxs-chevron-right arrow more-arrow3"></i>
+                  </span>
+                  <ul class="more-sub-menu3 sub-menu">
+                    <li><a href="our-service.html#civil-structure">Civil Structure </a></li>
+                    <li><a href="our-service.html#civil-maintenance">Civil Maintenance </a></li>
+                    <li><a href="our-service.html#steel-structure">Steel Structure </a></li>
+                    <li><a href="our-service.html#steel-maintenance">Steel Maintenance </a></li>
+                  </ul>
+                </li>
+                <li><a href="business-location.html">busines unit location</a></li>
+                <li><a href="equipment.html">Equipment & Inventory </a></li>
                 <li><a href="project.html">Project list</a></li>
               </ul>
             </li>
@@ -119,15 +148,15 @@
           <div>
             <a class="buttoninformation" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
               <span class="buttoninformation__icon">
-                <img src="assets/img/info.png" alt="" />
+                <i class="fa-solid fa-circle-info"></i>
               </span>
             </a>
           </div>
           <div class="search-box">
             <i class="bx bx-search"></i>
-            <div class="input-box">
-              <input type="text" placeholder="Search..." />
-            </div>
+            <form class="input-box" id="search-form">
+              <input type="text" id="search-input" placeholder="Search..." />
+            </form>
           </div>
         </div>
       </div>
@@ -140,20 +169,20 @@
       <div class="overlay"></div>
       <div class="statistik" id="statistik">
         <div class="statistik-table">
-          <h1 class="Info_statistik">3200/<span>User</span></h1>
-          <p class="penjelasan_statistik">3200 pengunjung pada website ini</p>
+          <h1 class="Info_statistik">100%<span></span></h1>
+          <p class="penjelasan_statistik">Contractors have a responsibility to protect the environment and minimize any negative impact on the surrounding community during the construction process.</p>
         </div>
         <div class="statistik-table">
           <h1 class="Info_statistik">600+/ <span></span></h1>
-          <p class="penjelasan_statistik">lebih dari 600 pekerja kami, ahli pada bidangnya</p>
+          <p class="penjelasan_statistik">more than 600 of our workers, experts in their fields</p>
         </div>
         <div class="statistik-table">
-          <h1 class="Info_statistik">4000+<span>project</span></h1>
-          <p class="penjelasan_statistik">lebih dari 4000 project yang sudah kami kerjakan</p>
+          <h1 class="Info_statistik">400+<span>project</span></h1>
+          <p class="penjelasan_statistik">We have worked on more than 400 projects</p>
         </div>
         <div class="statistik-table">
           <h1 class="Info_statistik">94%<span>client</span></h1>
-          <p class="penjelasan_statistik">94% dari client kami merasa cukup puas dengan apa yang kami sudah berikan</p>
+          <p class="penjelasan_statistik">94% of our clients are quite satisfied with what we have provided</p>
         </div>
       </div>
       <div class="container">
@@ -229,7 +258,7 @@
           <div class="content" data-aos="fade-up">
             <h1>VISION</h1>
             <p>Being a leading national private companies in the construction industry , providing welfare to employees,the board,through a commitment to good corporate governance.</p>
-            <a href="history.html"> <button class="tombol btn2">company history</button></a>
+            <a href="history.html#comitment"> <button class="tombol btn2">our comitment</button></a>
           </div>
         </div>
         <div class="mission">
@@ -240,7 +269,7 @@
               Always maintain a commitment to provide customer satisfaction with the attention to quality the right price and the right time job on every project that was done , as well as providing employment opportunities to the human
               resource potential.
             </p>
-            <a href="./Assets/certificate/2015.jpg" download=""> <button class="tombol2 btn3">see our achievement</button></a>
+            <a href="how-we-work.html" download=""> <button class="tombol2 btn3">how we work</button></a>
           </div>
         </div>
       </div>
@@ -252,10 +281,12 @@
         <div class="line"></div>
         <div class="row mb-5 justify-content-between">
           <div class="judul_business col-md-6 mb-3" data-aos="fade-down">
-            <h1>BUSINESS</h1>
+            <h1>OUR SERVICES</h1>
             <p>
-              <span>PT. Yogma Wijaya Kusuma</span> is a service company managed by a private party engaged in Steel Construction, Building Maintenance, Supplier, etc. Pt. Yogma Wijaya Kusuma is growing after becoming a subcon of PT.
-              Takenaka Indonesia, PT. Takenaka Doboku, PT. Schneider, etc. since 2000 PT . Yogma Wijaya Kusuma have a workshop or work the land area of ​​2400 m2 which consists of 4 parts .
+              <span></span>Our service consists of four elements: civil structure, civil maintenance, steel structure, and steel maintenance. Civil structure refers to the design and construction of buildings, bridges and other
+              infrastructure using concrete, brick and other materials. Civil maintenance involves the upkeep and repair of these structures to ensure their safety and functionality. Steel structure refers to the design and construction of
+              buildings, bridges and other infrastructure using steel as the primary material. Steel maintenance involves the upkeep and repair of these structures to ensure their safety and functionality. Overall, our service aims to
+              provide high-quality, reliable solutions for all your civil and steel construction needs.
             </p>
           </div>
           <div class="business_button col-md-5" data-aos="fade-up">
@@ -276,9 +307,9 @@
             <img src="Assets/project/pabrik (2).jpg" alt="" />
           </div>
           <div class="card-content">
-            <h1>1</h1>
+            <h1>Civil Structure</h1>
             <p>The first place in use for the place of loading or place the goods will decline in fabrication .</p>
-            <a href="#"> <button class="tombol btn2">contact sales</button></a>
+            <a href="#"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
         <div class="slide col-lg-3 mb-3">
@@ -287,9 +318,9 @@
           </div>
 
           <div class="card-content">
-            <h1>2</h1>
+            <h1>Civil Maintenance</h1>
             <p>The fourth place in use finish as a primer to strengthen the steel structure has been completed in fabrication</p>
-            <a href="#"> <button class="tombol btn2">contact sales</button></a>
+            <a href="#"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
         <div class="slide col-lg-3 mb-3">
@@ -298,9 +329,9 @@
           </div>
 
           <div class="card-content">
-            <h1>3</h1>
+            <h1>Steel Struckture</h1>
             <p>The third place in use as a storage area stock material adjacent to the warehouse PT .Yogma Wijaya Kusuma.</p>
-            <a href="#"> <button class="tombol btn2">contact sales</button></a>
+            <a href="#"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
         <div class="slide col-lg-3">
@@ -309,9 +340,9 @@
           </div>
 
           <div class="card-content">
-            <h1>4</h1>
+            <h1>Steel Maintenance</h1>
             <p>The fourth place in use finish as a primer to strengthen the steel structure has been completed in fabrication</p>
-            <a href="#"> <button class="tombol btn2">contact sales</button></a>
+            <a href="#"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
       </div>
@@ -608,9 +639,11 @@
               <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <p>
-              Jln.Damai <br />
-              No.57 Rt.02/023 <br />Kp.Bulu Ds. Setia Mekar<br />
-              Tambun Bekasi
+              <a href="https://www.google.com/maps/place/PT.YOGMA+WIJAYA+KUSUMA/@-6.251158,107.0488139,17z/data=!3m1!4b1!4m5!3m4!1s0x2e698e557880f5bb:0xad178e943654a66b!8m2!3d-6.2511719!4d107.0510684">
+                Jln.Damai <br />
+                No.57 Rt.02/023 <br />Kp.Bulu Ds. Setia Mekar<br />
+                Tambun Bekasi</a
+              >
             </p>
             <div class="logo-phone">
               <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
@@ -635,7 +668,8 @@
             <h4>about us</h4>
             <ul>
               <li><a href="history.html">history</a></li>
-              <li><a href="history.html#our-partner">our partner</a></li>
+              <li><a href="history.html#our-partner">our comitment</a></li>
+              <li><a href="history.html#our-partner">how we work</a></li>
               <li><a href="our-team.html">our team</a></li>
               <li><a href="our-team.html#careers">career</a></li>
             </ul>
@@ -643,8 +677,8 @@
           <div class="col-lg-2">
             <h4>business</h4>
             <ul>
-              <li><a href="#business">service</a></li>
-              <li><a href="#business">unit location</a></li>
+              <li><a href="our-service.html">our service</a></li>
+              <li><a href="business-location.html">business location</a></li>
               <li><a href="equipment.html">Equipmen</a></li>
               <li><a href="project.html">project</a></li>
             </ul>
@@ -679,7 +713,8 @@
       </div>
     </footer>
     <!--  ahir footer-->
-
+    <!-- loader -->
+    <script src="js/preloader.js"></script>
     <!-- load icon -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 
@@ -697,7 +732,7 @@
 
     <!-- navbar java script -->
     <script src="js/navbar.js"></script>
-
+    <script src="js/search-bar.js"></script>
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
